--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+body {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  color: #333;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
+}
+
 .App {
   text-align: center;
 }
