Added CSS for image layering and second image

--- a/client/src/components/Registration/styles.module.css
+++ b/client/src/components/Registration/styles.module.css
@@ -1,6 +1,8 @@
 .regForm {
   background-color: white;
-  padding: 15px;
+  padding: 25px;
+  margin: 50px;
+  position: relative;
 }
 
 .formHeaderGroup {
@@ -14,7 +16,30 @@
   border-color: #ededf1;
 }
 
+.wide {
+  width: 100%;
+}
+
+.bodyImage {
+  max-width: 160px;
+}
+.qSection {
+  margin-top: 30px;
+  margin-left: 15px;
+}
 .formImage {
-  float: left;
-  width: 140px;
+  max-width: 160px;
+  margin-top: -25px;
+  margin-left: 80px;
+}
+
+.layer1,
+.formImage {
+  position: absolute;
+  z-index: 1;
+}
+
+.layer2 {
+  position: absolute;
+  z-index: 2;
 }
