--- a/client/src/components/RecipeHeader/RecipeHeader.module.css
+++ b/client/src/components/RecipeHeader/RecipeHeader.module.css
@@ -38,7 +38,7 @@
 .effortBox {
   margin-top: 10px;
   display: inline-block;
-  font-size: 11px;
+  font-size: 20px;
 }
 
 .clockIcon {
@@ -50,7 +50,7 @@
 .prepTime,
 .cookTime {
   display: block;
-  padding-bottom: 6px;
+  padding-bottom: 15px;
   line-height: 14px;
   font-weight: bold;
 }
@@ -81,7 +81,7 @@
   font-size: 15px;
   font-weight: bold;
   background-color: #667f2e;
-  color: white;
+  color: black;
 }
 
 .buttonContainer {
