--- a/client/src/components/RecipeHeader/RecipeHeader.module.css
+++ b/client/src/components/RecipeHeader/RecipeHeader.module.css
@@ -24,15 +24,8 @@
   line-height: 40px;
   color: #333;
   letter-spacing: 0.2px;
-  font-size: 40px;
   margin-top: 8px;
   margin-bottom: 10px;
-  /*
-  line-height: 40px;
-  letter-spacing: .2px;
-  font-size: 40px;
-  margin-top: 8px;
-  margin-bottom: 10px; */
 }
 
 .effortBox {
@@ -47,15 +40,25 @@
   padding: 5px;
 }
 
+.label {
+  padding-bottom: 3px;
+  /* line-height: 14px; */
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.propsSection {
+  margin-left: 48px;
+  margin-top: -32px;
+}
 .prepTime,
 .cookTime,
 .directions,
 .ingredients,
 .equipment {
-  display: block;
-  padding-bottom: 15px;
-  line-height: 14px;
-  font-weight: bold;
+  font-weight: normal;
+
+  padding-left: 5px;
 }
 
 .hours {
@@ -72,6 +75,10 @@
   padding-left: 50px;
 }
 
+.card {
+  margin: 0px;
+  padding: 0px;
+}
 .cardWrapper {
   max-width: 375px;
 }
@@ -80,18 +87,18 @@
   padding: 0px;
 }
 
-.cardFooter {
+/* .cardFooter {
   font-size: 15px;
   font-weight: bold;
   background-color: #667f2e;
   color: black;
-}
+} */
 
-.buttonContainer {
+/* .buttonContainer {
   display: inline-block;
   padding-left: 2px;
-}
-
+} */
+/*
 .button {
   border-radius: 3px;
   font-size: 15px;
@@ -100,28 +107,28 @@
   padding-top: 10px;
   padding-left: 5px;
   border: 0;
-}
+} */
 
-.buttonSave {
+/* .buttonSave {
   background: #be2a77;
   color: white;
-}
+} */
 
-.buttonPrint {
+/* .buttonPrint {
   margin-right: 30px;
   margin-left: 15px;
   background-color: #531b7b;
   color: white;
-}
+} */
 
-.buttonText {
+/* .buttonText {
   text-align: left;
   padding-right: 10px;
   font-size: 15px;
-}
+} */
 
-.buttonIcon {
+/* .buttonIcon {
   text-align: right;
   font-weight: bold;
   margin-left: 10px;
-}
+} */
